# api/internal/domain/user/entity/user.entity.go
@@ -3,18 +3,18 @@ package entity
 import (
 	"errors"
 	"net/mail"
+	"time"
 
-	"github.com/jackc/pgx/v5/pgtype"
 	"golang.org/x/crypto/bcrypt"
 )
 
 type User struct {
-	ID        int64            `json:"id"`
-	Name      string           `json:"name"`
-	Email     string           `json:"email"`
-	Password  string           `json:"password"`
-	CreatedAt pgtype.Timestamp `json:"created_at"`
-	UpdatedAt pgtype.Timestamp `json:"updated_at"`
+	ID        int64     `json:"id"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	Password  string    `json:"password"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
 
 func NewUser(name string, email string, password string) (user *User, err error) {
@@ -71,19 +71,23 @@ func (u *User) GetID() int64 {
 	return u.ID
 }
 
-func (u *User) GetUserName() string {
+func (u *User) GetName() string {
 	return u.Name
+}
+
+func (u *User) GetEmail() string {
+	return u.Email
 }
 
 func (u *User) GetPassword() string {
 	return u.Password
 }
 
-func (u *User) GetCreatedAt() pgtype.Timestamp {
+func (u *User) GetCreatedAt() time.Time {
 	return u.CreatedAt
 }
 
-func (u *User) GetUpdatedAt() pgtype.Timestamp {
+func (u *User) GetUpdatedAt() time.Time {
 	return u.UpdatedAt
 }
 
@@ -103,10 +107,10 @@ func (u *User) SetPassword(password string) {
 	u.Password = password
 }
 
-func (u *User) SetCreatedAt(createdAt pgtype.Timestamp) {
+func (u *User) SetCreatedAt(createdAt time.Time) {
 	u.CreatedAt = createdAt
 }
 
-func (u *User) SetUpdatedAt(updatedAt pgtype.Timestamp) {
+func (u *User) SetUpdatedAt(updatedAt time.Time) {
 	u.UpdatedAt = updatedAt
 }
