# api/internal/domain/user/usecase/delete_user.usecase.go
@@ -1,7 +1,8 @@
 package usecase
 
 import (
-	"github.com/jackc/pgx/v5/pgtype"
+	"time"
+
 	"github.com/marceloamoreno/goapi/internal/domain/user/repository"
 )
 
@@ -10,11 +11,11 @@ type DeleteUserInputDTO struct {
 }
 
 type DeleteUserOutputDTO struct {
-	Name      string           `json:"name"`
-	Email     string           `json:"email"`
-	Password  string           `json:"password"`
-	CreatedAt pgtype.Timestamp `json:"created_at"`
-	UpdatedAt pgtype.Timestamp `json:"updated_at"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	Password  string    `json:"password"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
 
 type DeleteUserUseCase struct {
