# api/internal/domain/user/usecase/get_user.usecase.go
@@ -1,7 +1,8 @@
 package usecase
 
 import (
-	"github.com/jackc/pgx/v5/pgtype"
+	"time"
+
 	"github.com/marceloamoreno/goapi/internal/domain/user/repository"
 )
 
@@ -10,12 +11,12 @@ type GetUserInputDTO struct {
 }
 
 type GetUserOutputDTO struct {
-	ID        int64            `json:"id"`
-	Name      string           `json:"name"`
-	Email     string           `json:"email"`
-	Password  string           `json:"password"`
-	CreatedAt pgtype.Timestamp `json:"created_at"`
-	UpdatedAt pgtype.Timestamp `json:"updated_at"`
+	ID        int64     `json:"id"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	Password  string    `json:"password"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
 
 type GetUserUseCase struct {
